# the15thsin.github.io

./: .gitignore  pyproject.toml
.github/workflows/: deploy.yml
backend/: Dockerfile  pyproject.toml
backend/src/app/api/: routes.py
backend/src/app/prompts/: system_prompt.py
backend/src/app/services/: nvidia_llm_service.py
backend/src/app/utils/: logger.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/layout/: MainLayout.jsx
frontend/src/components/terminal/: AnimatedText.jsx  Banner.jsx  HistoryItem.jsx  StatusBar.jsx  Terminal.jsx  TerminalInput.jsx  TerminalOutput.jsx  ThinkingBox.jsx
frontend/src/constants/: banner.js
frontend/src/hooks/: useAutoScroll.js  useBackendHealth.js  useChat.js  useTerminalCursor.js
frontend/src/services/: chatService.js
frontend/src/utils/: history.js
src/app/: main.py
src/app/api/: __init__.py
